feat(journeys): 8.2.5 add publish flow
